prover-ray/zkcdriver/testdata/synced/invalid/basic_03.zkc
//error:3:20-21:initialiser requires single variable declaration
fn f(x:u8) -> (r:u8) {
  var a:u8, b:u8 = 0
  r = 0
  return
}
